# lsy_drone_racing

./: .dockerignore  .gitignore  .gitmodules  .readthedocs.yaml  AGENTS.md  AIGP_CHECKLIST.md  LICENSE  README.md  TODO.md  config.json  docker-compose.yaml  env_info.npz  environment.yaml  info.md  optimal_waypoints.txt  path.txt  pathSegments.txt  pyproject.toml  read_meV2.md  setup.txt  setup_acados.sh  task.json  traj.txt  working_waypoints.txt  x.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: competition.yaml  competition.yml  kaggle.yml  ruff.yml  test_solution.yml  testing.yml
benchmarks/: README.md  main.py  profile.py  profile_envs.py  sim.py
benchmarks/config/: test.toml
config/: aigp_curriculum_10stage.toml  aigp_curriculum_10stage_tuned_v1.toml  aigp_curriculum_10stage_tuned_v2.toml  aigp_curriculum_stage0_smoke.toml  aigp_qualifier_eval_profile_default.toml  aigp_stage0_single_gate.toml  controller_config.toml  getting_started.toml  getting_started.yaml  learning.yaml  level0.toml  level0.yaml  level0_train.yaml  level1.toml  level1.yaml  level2.toml  level2.yaml  level3.toml  level3.yaml  level_straight.toml  multi_level0.toml  multi_level2.toml  multi_level3.toml  ppo.toml  sac.toml  td3.toml  train0.yaml  train0_standard.yaml  train1.yaml  train2.yaml
config/action_transformer/: default.yaml  faster.yaml  slow.yaml
config/aigp_tracks/: competition_a2rl.toml  competition_alphapilot.toml  competition_swift.toml  tii_real_track1.toml  tii_real_track2.toml  tii_real_track3.toml
config/level/: level2.yaml  level3.yaml  train3.yaml  train3_deployment.yaml
config/observation_parser/: default.yaml  relative.yaml
config/rewarder/: alpha_mai31_rewarder.yaml  beta_june07_rewarder.yaml  default.yaml
control/: level1_controller.py
controllers/example/: example_controller.py
controllers/ppo/: ppo.py  ppo_deploy.py  train.py
docker/: Crazyswarm.Dockerfile  Deploy.Dockerfile  Dockerfile  Sim.Dockerfile  requirements.txt
docs/: conf.py  index.rst  requirements.txt
docs/aigp/: DRONEPRIX_DIFF.md  architecture.md  index.md  kaggle_runtime.md  qualifier_kpis.md  runbook.md
docs/challenge/: deployment.rst  online_competition.rst  overview.rst  simulation.rst
docs/control/: attitude_controller.rst  attitude_mpc.rst  controller.rst  index.rst  ppo_controller.rst  state_controller.rst  trajectory_controller.rst
docs/envs/: drone_race.rst  drone_racing_deploy_env.rst  drone_racing_env.rst  index.rst  real_drone_race.rst
docs/getting_started/: general.rst  setup.rst
docs/ros/: index.rst  ros_connector.rst  ros_utils.rst
docs/sim/: drone.rst  index.rst  noise.rst  physics.rst  sim.rst  symbolic.rst
docs/utils/: checks.rst  import_utils.rst  index.rst  utils.rst
ece484_fly/: __init__.py
ece484_fly/control/: __init__.py  attitude_controller.py  state_controller.py
ece484_fly/envs/: __init__.py  drone_race.py  race_core.py  real_race_env.py  utils.py
ece484_fly/utils/: __init__.py  ros.py  utils.py
examples/: controller.py  controller_test.py  gridLessRouting.py  mip_controller.py  play_model.py  plot_observations.py  routing_controller.py  simple_constroller.py  train.py  train_utils.py  trajectory_controller.py
flight_log/: simu_times.npz  simu_times100.npz  simu_times100_V2.npz  static_times.npz  static_times100.npz
flight_logs/: -1_planned_trajectories_10_13_13.npz  0_planned_trajectories_10_13_13.npz  1_planned_trajectories_10_13_13.npz  2_planned_trajectories_10_13_13.npz  3_planned_trajectories_10_13_13.npz  actual_trajectory_10_13_13.npz  observations.npz
lsy_drone_racing/: __init__.py  command.py  constants.py  controller.py  controller_manager.py  env_modifiers.py  rotations.py  routingModule.py  utils.py  vicon.py  wrapper.py
lsy_drone_racing/aigp/: __init__.py  curriculum.py  eval.py  observation.py  rewards.py  sb3_vec_env.py  wrappers.py
lsy_drone_racing/control/: KaFa_1500.py  KaFa_1500_attitude.py  KaFa_1500_v2.py  KaFa_1500_v3.py  __init__.py  a_star_planner.py  acados_model.py  acados_model_collision.py  astar.py  astar_controller.py  attitude_MPC_eigen_2.py  attitude_MPC_eigen_3.py  attitude_controller.py  attitude_controller_multi.py  attitude_input.py  attitude_mpc.py  attitude_mpc_colision_avoidance.py  attitude_mpc_collision_avoidance.py  attitude_mpc_combined.py  attitude_mpc_combined2.py  attitude_mpc_eigen.py  attitude_mpc_multi.py  attitude_mpcc.py  attitude_rl.py  attitude_rl_multi.py  b_spline_optimizer_test.py  closing_controller.py  collision_avoidance.py  controller.py  dynamic_trajectory_controller.py  easy_controller.py  fresssack_controller.py  hotstart_data.py  kino_A_star_with_replan_controller.py  level1_fast.py  (+39 more)
patch/: dslpatch_vicon.cpp
path_segments/: path_0.txt
plot/: plot_new.py  trajectory_planer.py
ros_ws/src/lsy_race_msgs/: CMakeLists.txt  package.xml
ros_ws/src/lsy_race_msgs/msg/: ClientState.msg  HostReady.msg  RaceStart.msg
ros_ws/src/lsy_race_msgs/srv/: CalibrateClock.srv
scripts/: FxTDO_tuning.py  README.md  README_template.md  bootstrap_wandb_auth.sh  build_readiness_report.py  check.py  check_cheat.py  check_qualifier_readiness.py  check_repo_invariants.py  check_track.py  check_whitelist.py  compare_aigp_runs.py  convert_droneprix_tracks.py  deploy.py  deploy_client.py  deploy_host.py  evaluate.py  kaggle.py  kaggle_preflight.py  leaderboard.toml  monitor_aigp_run.py  multi_deploy.py  multi_sim.py  multiple_runs.py  push_aigp_kaggle_kernel.py  run_aigp_kaggle_session.py  save_track_as_config.py  sim.py  sim_dob.py  sim_test.py  sim_traj.py  standalone_barrier.py  test.py  train.py  train_aigp_curriculum.py  update_leaderboard.py  update_readme.py  visualize.py  visualize_paths.py  visualize_world.py
src/: my_controller.py  my_controller_2.py  my_controller_cpp.py  my_controller_static_world.py  state_estimator.py
test/: test_observation_parser.py
test.py/: test_obb.py
tests/: conftest.py  test_ppo.py  test_stable_baselines_compat.py  test_wrapper.py  utils.py
tools/: activate_acados.sh  setup_acados.bat  setup_acados.sh  setup_mocap.sh
(+177 files in other folders)
